--- a/pkg/static/proddeets.css
+++ b/pkg/static/proddeets.css
@@ -6,7 +6,7 @@
 }
 
 .proddeets-parents .side-image img{
-    width: 6vw;
+    width: 60px;
     margin: 20px;
     border: 1px solid red;
     border-radius: 10px;
@@ -27,6 +27,13 @@ background-color: rgb(7, 7, 7);
 
 .proddeets-parents .details{
     padding: 20px;
+}
+
+.proddeets-parents .details h1{
+    padding: 40px 5px;
+}
+.proddeets-parents .details .price{
+    padding: 30px 0 0 0;
 }
 
 .proddeets-parents {
@@ -69,8 +76,42 @@ background-color: rgb(7, 7, 7);
 .proddeets-parents button:hover{
     cursor: pointer;
     scale: 1;
-    transform: translatey(-5px);
    
    
    }
    
+
+
+
+
+   .quantity-control {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .quantity-control .btn {
+    padding: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+  }
+  
+  .quantity-control .btn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+  
+  .quantity-control input[type="number"] {
+    width: 60px;
+    text-align: center;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
