--- a/pkg/templates/user/account.html
+++ b/pkg/templates/user/account.html
@@ -34,15 +34,33 @@
             </ul>
         </div>
         <div class="big-side-account">
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="account-parent">
+                <div class="accinfo">
+                    <h3>ACCOUNT INFORMATION</h3>
+                </div>
+                <div>
+                    <h4> CONTACT INFORMATION</h4>
+                    <P> Marvins Enujekor</P>
+                    <p> enujekormarvellous@gmail.com</p>
+                </div>
+                <div class="editacc">
+                    <a href="">EDIT</a>
+                    <a href="">CHANGE PASSWORD</a>
+                </div>
             </div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="account-parent">
+                <div class="accinfo">
+                    <h3>ADDRESS BOOK</h3> <a href="">MANAGE ADDRESSES</a>
+                </div>
+                <div>
+                    <h4> CONTACT INFORMATION</h4>
+                    <P> Marvins Enujekor</P>
+                    <p> enujekormarvellous@gmail.com</p>
+                </div>
+                <div class="editacc">
+                    <a href="">EDIT</a>
+                    <a href="">CHANGE PASSWORD</a>
+                </div>
             </div>
         </div>
     </div>
