--- a/pkg/static/cart.css
+++ b/pkg/static/cart.css
@@ -84,7 +84,6 @@
 
 
 .striped-table a{
-   background-color: red;
    padding: 10px;
    border-radius: 7px;
    color: white;
@@ -92,24 +91,63 @@
 
 
 
-.striped-table button{
-  background-color: rgb(255, 136, 0);
+
+
+.btn-primary{
+  background-color: blue;
+}
+
+.btn-danger{
+  background-color: red;
+}
+
+.btn-warning{
+  background-color: rgb(255, 89, 0);
+}
+
+.quantity-control {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
+.btn-primary{
   padding: 10px;
-  border-radius: 7px;
-  color: white;
-  border: none;
+  font-size: 18px;
   cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+
+  text-align: center;
 }
 
-.striped-table tr td:nth-child(2) a {
- background-color: black;
 
+.quantity-control button {
+  padding: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
 }
-.striped-table tr td:nth-child(1) a {
-  background-color: black;
 
+.quantity-control .btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
 
-.striped-table input{
-  width: 80%;
+.quantity-control input[type="number"] {
+  width: 60px;
+  text-align: center;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  height: 30px;
 }
