--- a/pkg/static/dashboard.css
+++ b/pkg/static/dashboard.css
@@ -10,11 +10,15 @@
 
 }
 body {
-    font-family: Arial, sans-serif;
     background-color: black;
     color: white;
     scroll-behavior: smooth;
     text-decoration: none;
+    margin-top: 80px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 1rem;
+    font-style: normal;
 
 }
 header.navbar {
@@ -28,6 +32,7 @@ header.navbar {
     width: 100%;
     top: 0;
     z-index: 4000;
+    height: 80px;
 }
 .nav-brand {
     font-size: 1.5em;
