--- a/pkg/templates/user/dashboard.html
+++ b/pkg/templates/user/dashboard.html
@@ -133,7 +133,7 @@
       <ul>
         <li><a href="{{url_for('account')}}">My Account </a></li>
         <li><a href="">My Orders</a></li>
-        <li><a href="">Logout</a></li>
+        <li><a href="{{url_for('login')}}" >Logout</a></li>
       </ul>
 
     </div>
