--- a/pkg/templates/user/login.html
+++ b/pkg/templates/user/login.html
@@ -31,6 +31,7 @@
             <button type="submit">Login</button>
               <span>if you dont have an account yet </span><a href="{{url_for('signup')}}">Signup</a>
             </form>
+            <a href="{{url_for('admin_dashboard')}}">admin</a>
         </div>
     </div>
 
